@@ -35,7 +35,7 @@
 #include "cvl/cvl_frame.h"
 #include "cvl/cvl_math.h"
 #include "cvl/cvl_convolve.h"
-#include "cvl_assert.h"
+#include "cvl/cvl_assert.h"
 
 
 /*
