@@ -34,7 +34,7 @@
 #include "cvl/cvl_frame.h"
 #include "cvl/cvl_math.h"
 #include "cvl/cvl_mix.h"
-#include "cvl_assert.h"
+#include "cvl/cvl_assert.h"
 
 #include "xalloc.h"
 
